--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@media screen and (min-width:1024px){
 body{
     background-image: url(../images/1.jpg);
     background-repeat: no-repeat;
@@ -152,4 +153,5 @@ nav ul li a:hover{
      margin-bottom:40px;
      margin-right:50px;
      
+}
 }
